--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
     <xxl-job-version>2.3.0</xxl-job-version>
     <activiti-engine-version>5.16.4</activiti-engine-version>
     <jedis-version>4.1.0</jedis-version>
+    <minio-version>8.0.3</minio-version>
+    <commons-io-version>2.8.0</commons-io-version>
   </properties>
 
   <dependencyManagement>
@@ -203,6 +205,18 @@
         <groupId>redis.clients</groupId>
         <artifactId>jedis</artifactId>
         <version>${jedis-version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.minio</groupId>
+        <artifactId>minio</artifactId>
+        <version>${minio-version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io-version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
